[package]
name = "chia-bls"
version = "0.5.1"
edition = "2021"
license = "Apache-2.0"
description = "BLS signature, verification and aggregation funcions for the Chia blockchain"
authors = ["Arvid Norberg <arvid@chia.net>"]
homepage = "https://github.com/Chia-Network/chia_rs/chia-bls/"
repository = "https://github.com/Chia-Network/chia_rs/chia-bls/"

[features]
py-bindings = ["dep:pyo3", "chia_py_streamable_macro", "chia-traits/py-bindings"]

[dependencies]
chia-traits = { version = "0.5.1", path = "../chia-traits" }
chia_py_streamable_macro = { version = "0.5.1", path = "../chia_py_streamable_macro", optional = true }
tiny-bip39 = "1.0.0"
anyhow = "1.0.71"
sha2 = "0.10.8"
hkdf = "0.12.0"
blst = { version = "0.3.11", git = "https://github.com/supranational/blst.git", rev = "0d46eefa45fc1e57aceb42bba0e84eab3a7a9725", features = ["portable"] }
hex = "0.4.3"
thiserror = "1.0.44"
pyo3 = { version = "0.19.0", features = ["multiple-pymethods"], optional = true }
arbitrary = { version = "1.3.0" }

[dev-dependencies]
rand = "0.8.5"
criterion = "0.5.1"
rstest = "0.17.0"

[lib]
crate-type = ["rlib"]

[[bench]]
name = "derive_key"
harness = false

[[bench]]
name = "sign"
harness = false

[[bench]]
name = "verify"
harness = false

[[bench]]
name = "parse"
harness = false
