[package]
name = "chia-client"
version = "0.10.0"
edition = "2021"
license = "Apache-2.0"
description = "Chia light client and async peer connections."
authors = ["Brandon Haggstrom <b.haggstrom@chia.net>"]
homepage = "https://github.com/Chia-Network/chia_rs"
repository = "https://github.com/Chia-Network/chia_rs"

[lints]
workspace = true

[dependencies]
chia-protocol = { workspace = true }
chia-traits = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
tokio-tungstenite = { workspace = true, features = ["native-tls"] }
futures-util = { workspace = true }
tungstenite = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
log = { workspace = true }
native-tls = { workspace = true }
