[package]
name = "chia-consensus"
version = "0.7.0"
edition = "2021"
license = "Apache-2.0"
description = "Utility functions and types used by the Chia blockchain full node"
authors = ["Richard Kiss <him@richardkiss.com>", "Arvid Norberg <arvid@chia.net>"]
homepage = "https://github.com/Chia-Network/chia_rs"
repository = "https://github.com/Chia-Network/chia_rs"

[features]
py-bindings = ["dep:pyo3", "dep:chia_py_streamable_macro"]

[dependencies]
clvmr = "0.6.1"
hex = "0.4.3"
pyo3 = { version = ">=0.19.0", optional = true }
sha2 = "0.10.8"
chia_streamable_macro = { version = "0.6.0", path = "../chia_streamable_macro" }
chia_py_streamable_macro = { version = "0.7.0", path = "../chia_py_streamable_macro", optional = true }
clvm-utils = { version = "0.7.0", path = "../clvm-utils" }
chia-traits = { version = "0.7.0", path = "../chia-traits" }
clvm-traits = { version = "0.7.0", path = "../clvm-traits" }
clvm-derive = { version = "0.6.0", path = "../clvm-derive" }
chia-protocol = { version = "0.7.0", path = "../chia-protocol" }
chia-wallet = { version = "0.7.0", path = "../chia-wallet" }
hex-literal = "0.4.1"
thiserror = "1.0.44"

[dev-dependencies]
num-traits = "0.2.15"
rstest = "0.16.0"
text-diff = "0.4.0"
criterion = "0.5.1"
rand = { version = "0.8.5", features = [ "small_rng" ] }

[lib]
bench = false

[[bench]]
name = "run-generator"
harness = false

[[bench]]
name = "tree-hash"
harness = false

[[bench]]
name = "merkle-set"
harness = false
