[package]
name = "chia-consensus"
version = "0.9.0"
edition = "2021"
license = "Apache-2.0"
description = "Utility functions and types used by the Chia blockchain full node"
authors = ["Richard Kiss <him@richardkiss.com>", "Arvid Norberg <arvid@chia.net>"]
homepage = "https://github.com/Chia-Network/chia_rs"
repository = "https://github.com/Chia-Network/chia_rs"

[features]
py-bindings = ["dep:pyo3", "dep:chia_py_streamable_macro"]

[dependencies]
clvmr = "0.7.0"
hex = "0.4.3"
pyo3 = { version = "0.21.2", optional = true }
sha2 = "0.10.8"
chia_streamable_macro = { workspace = true }
chia_py_streamable_macro = { workspace = true, optional = true }
clvm-utils = { workspace = true }
chia-traits = { workspace = true }
clvm-traits = { workspace = true }
clvm-derive = { workspace = true }
chia-protocol = { workspace = true }
chia-puzzles = { workspace = true }
chia-bls = { workspace = true }
hex-literal = "0.4.1"
thiserror = "1.0.44"

[dev-dependencies]
num-traits = "0.2.15"
rstest = "0.16.0"
text-diff = "0.4.0"
criterion = "0.5.1"
rand = { version = "0.8.5", features = [ "small_rng" ] }

[lib]
bench = false

[[bench]]
name = "run-generator"
harness = false

[[bench]]
name = "tree-hash"
harness = false

[[bench]]
name = "merkle-set"
harness = false
