[package]
name = "chia-datalayer"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "DataLayer modules for Chia blockchain"
authors = ["Chia Network, Inc. <hello@chia.net>"]
homepage = "https://github.com/Chia-Network/chia_rs"
repository = "https://github.com/Chia-Network/chia_rs"

[lints]
workspace = true

[features]
py-bindings = ["dep:pyo3"]

[lib]
crate-type = ["rlib"]

[dependencies]
clvmr = { workspace = true }
num-traits = { workspace = true }
pyo3 = { workspace = true, optional = true }
thiserror = { workspace = true }
chia_streamable_macro = { workspace = true }
chia-traits = { workspace = true }
chia-sha2 = { workspace = true }
chia-protocol = { workspace = true }

[dev-dependencies]
clvm-utils = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
open = { workspace = true }
percent-encoding = { workspace = true }
rstest = { workspace = true }
url = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["chia-sha2"]
