[package]
name = "chia-fuzzing"
version = "0.28.0"
edition = "2021"


[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { workspace = true, features = ["derive"] }
clvmr = { workspace = true, features = ["counters"] }
chia-sha2 = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
