[package]
name = "chia-fuzzing"
version = "0.28.1"
edition = "2021"
license = "Apache-2.0"
description = "Fuzzing tools for Chia Projects on Rust"
authors = ["Jack Nelson <j.nelson@chia.net>"]
homepage = "https://github.com/Chia-Network/chia_rs"
repository = "https://github.com/Chia-Network/chia_rs"


[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { workspace = true, features = ["derive"] }
clvmr = { version = "0.*", features = ["counters"] } # This is done to allow easier updates of clvmr
chia-sha2 = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
