[package]
name = "chia-puzzle-types"
version = "0.27.0"
edition = "2021"
license = "Apache-2.0"
description = "CLVM types for standard Chia puzzles."
authors = ["Brandon Haggstrom <b.haggstrom@chia.net>"]
homepage = "https://github.com/Chia-Network/chia_rs"
repository = "https://github.com/Chia-Network/chia_rs"

[lints]
workspace = true

[features]
arbitrary = ["dep:arbitrary", "chia-protocol/arbitrary"]

[dependencies]
clvmr = { workspace = true }
num-bigint = { workspace = true }
hex-literal = { workspace = true }
clvm-utils = { workspace = true }
clvm-traits = { workspace = true, features = ["chia-bls"] }
chia-sha2 = { workspace = true }
chia-bls = { workspace = true }
chia-protocol = { workspace = true }
chia-puzzles = { workspace = true }
arbitrary = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
hex = { workspace = true }
anyhow = { workspace = true }
rstest = { workspace = true }
