[package]
name = "chia-puzzles"
version = "0.8.0"
edition = "2021"
license = "Apache-2.0"
description = "Chia primitives needed for building wallets."
authors = ["Brandon Haggstrom <b.haggstrom@chia.net>"]
homepage = "https://github.com/Chia-Network/chia_rs"
repository = "https://github.com/Chia-Network/chia_rs"

[features]
arbitrary = ["dep:arbitrary", "chia-protocol/arbitrary"]

[dependencies]
clvmr = "0.7.0"
sha2 = "0.10.8"
num-bigint = "0.4.3"
hex-literal = "0.4.1"
clvm-utils = { version = "0.8.0", path = "../clvm-utils" }
clvm-traits = { version = "0.8.0", path = "../clvm-traits", features = ["chia-bls"] }
chia-bls = { version = "0.8.0", path = "../chia-bls" }
chia-protocol = { version = "0.8.0", path = "../chia-protocol" }
arbitrary = { version = "1.3.0", features = ["derive"], optional = true }

[dev-dependencies]
hex = "0.4.3"

[lib]
crate-type = ["rlib"]
